# shared-python-package-namespace

./: README.md
app/: main.py  pyproject.toml
libs/package_a/: pyproject.toml
libs/package_a/src/rorschad/package_a/: __init__.py
libs/package_b/: pyproject.toml
libs/package_b/src/rorschad/package_b/: __init__.py
