[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["package-a", "package-b"]

[tool.uv.sources]
package-a = { path = "../libs/package_a", editable = true }
package-b = { path = "../libs/package_b", editable = true }
