[project]
name = "package-b"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rory Schadler", email = "48921090+roryschadler@users.noreply.github.com" },
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lila"]
